[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/enemies/boss.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/Boss.gd" type="Script" id=2]
[ext_resource path="res://src/characters/bullets/EnemyBullet.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 270.0
height = 352.0

[node name="Boss" type="Area2D"]
position = Vector2( 530, 325 )
script = ExtResource( 2 )
enemy_bullet_scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 13 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="BulletTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
